--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Install manually Recommended -->
+    <!-- Below is the Google tag for this account. Copy and paste it in the code of every page of your website, immediately after the <head> element. Don’t add more than one Google tag to each page. -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1VGMP8TCGK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-1VGMP8TCGK');
+    </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WriteWise AI - Premium Content Suite</title>
