--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="monetag" content="fca510fd66dfdb2cdb270fc43cda8648">
     <!-- Install manually Recommended -->
     <!-- Below is the Google tag for this account. Copy and paste it in the code of every page of your website, immediately after the <head> element. Don’t add more than one Google tag to each page. -->
     <!-- Google tag (gtag.js) -->
